# ChangeLog for media-sound/jamin-presets
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jamin-presets-4.0 (15 Sep 2009)

  15 Sep 2009; Gavin Pryke <gavinlee303@googlemail.com>
  +jamin-presets-4.0.ebuild, +metadata.xml:
  initial import of jamin-presets
