@@ -1,4 +1,5 @@
-DIST jaminpresets4.0_all.tar.gz 994401 RMD160 d11122dc5320dd4b2726867a4fb2d27fb1b813e0 SHA1 f2b47ad5a62deac90d2b14dc1d3dced8053a0fce SHA256 4c65f507d82b35a87fdb32d80da654e7b9f5d86cf7ae8c3b8a5877f0166482b0
-EBUILD jamin-presets-4.0.ebuild 665 RMD160 7300c24581b8d2c1358ef2fdb8b1e44d61a2c1e8 SHA1 505f23ef01d53134c98dfe2b0908f61b41be90d8 SHA256 aea485f7330d70c7e88d54c57a5f45658bdf8251fdbf9d52015a80fcfe62392d
-MISC ChangeLog 295 RMD160 792612a411aa447c5ea3ff9ddd1e9a14c3209f93 SHA1 121b9c978e62c90aaa869ef96927e5b50dccc863 SHA256 afd583afe9ac518e90266d0740e112c92415cfda8f5ca5b9ba8647f1bbb86390
-MISC metadata.xml 268 RMD160 facc07bd885f20615a1f2555069329c642e1a566 SHA1 2456bdb8a218c9d477d2d6ee4bf158de070c7be4 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89
+DIST jaminpresets4.0_all.tar.gz 994401 SHA256 4c65f507d82b35a87fdb32d80da654e7b9f5d86cf7ae8c3b8a5877f0166482b0 SHA512 0f40f88b8b3f15949531218028eb663ebf3978a600d114e6556e22b7831d59d343cb6adf6705dd789dec47ad1833ecb211732e844051b29d74d9622789d5b2ab WHIRLPOOL 6152aa717550caa247b00ccc3d7066817d26429a15423978a07edb35122fcf914ebc4903bb19ed06f2ecb3bc30904a81658620086bf2116fc7f45142275f27da
+EBUILD jamin-presets-4.0-r1.ebuild 581 SHA256 b30ed1bb89defad282acdc336a5ac09999f210d7d8e1d1aa31664e01b6d76d22 SHA512 77d1fd9442f0e9876eb1e79dc95a5493fcecaf22a5abea53478268affb1a22148e89e85f23671d9b69a1735f03d2a9cc574614a54a0d1f47dd851eee474fef5e WHIRLPOOL 688fb91864d2681d2538f5e1e117561f94202d079d7455acb65aa1ff82f5887a5e5b7f79bd8fc03f56acf51dde9a3916d546afa821c8dd5930c56e6839bf7c15
+EBUILD jamin-presets-4.0.ebuild 608 SHA256 02510cc20efde90ae875413b8b85a5e6fca87be1bafadc18682635671c187729 SHA512 c91649ef1a0d9adbd4945848406bc45d292283a9eb1e7ae9927d6aa8a65fc89ecba9edaf2d46aba7fe668071912e334426359ffe8f2d42b78292d5f6a6fdd7bd WHIRLPOOL 1ca4bfb2eec021fc040fef1e194af8b50b0d1fe41be0d9d1c44f069c10c19d3796b49be1153d1c8ca5eeac1019bdaa55a2ff30651773ea96f7f860b99f13d626
+MISC ChangeLog 516 SHA256 0b6bf001a8ac1ead72a80a91b720b9f1238ab8bb9b0d459d457ab4799c0ff731 SHA512 9ac675493a14e1d7f0d15e4aa7699584528c5063946ffdd6b756e1bac6f45c94107493c746cb9c167197b4a34c1f8af135fff3b049c58a216883474ea26358b5 WHIRLPOOL d3b6cc3abd6ce3120ff03b83e08264bebf0f2e54a31b9766b6a986720327837810b504c8b5d7f285f2f532d9773b67347d91d68142188daa4d1b8b2b1878e5c8
+MISC metadata.xml 268 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89 SHA512 3d709a016692f887d642d19b2644c10a09f666133f1f035b8a4c10e5772fbb39fa84a856a496d392594ccf850739fbf46ffa78ecc74214e8342ee97676b375e9 WHIRLPOOL 17c886c5b97925bd9223c0210170a63e55a2c2a238ae81ebf8efa14109d790406f45d0773d63bea825c1e40b058bd9e20a5d9c264da4db7c8fd2e556ecd83b2a
