@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/jamin-presets
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*jamin-presets-4.0-r1 (19 Nov 2015)
+
+  19 Nov 2015; Gavin Pryke (gavlee) <gavinlee303@gmail.com>
+  jamin-presets-4.0.ebuild, +jamin-presets-4.0-r1.ebuild:
+  homepage dead. upload to proaudio distfiles and update SRC_URI
 
 *jamin-presets-4.0 (15 Sep 2009)
 
